@@ -5,6 +5,7 @@
 	  an actual tag in the PGN spec I was looking for a reason to use!!
 	* Catch exception if unable to display help (Bug #432216)
         * Don't consider a missing autoload file an error
+	* Catch IOError exceptions when autosaving (Bug #425614)
 
 2007-04-09  Robert Ancell  <robert.ancell@gmail.com>
 
